Linux: added dbus panel targets for mate & xfce4 Migrated to non-recursive automake (top level Makefile.am controls full build) Updated autotools build infrastructure Expanded po translations from matching strings in gnome-applets & mate-applets Updated translation files

--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,47 @@
+*~
 Makefile
 Makefile.in
-./aclocal.m4
-./autom4te.cache/
-./config.guess
-./config.h
-./config.h.in
-./config.log
-./config.status
-./config.sub
-./configure
-./depcomp
-./install-sh
-./intltool-extract.in
-./intltool-merge.in
-./intltool-update.in
-./missing
-./stamp-h1
-gnome/GNOME_BubblemonApplet.server
-gnome/GNOME_BubblemonApplet.server.in
-man/bubblemon-gnome2.1
-man/hu/bubblemon-gnome2.1
-man/sv/bubblemon-gnome2.1
+aclocal.m4
+autom4te.cache/
+bubblemon-applet
+bubblemon-*.tar.*
+compile
+config.guess
+config.h
+config.h.in
+config.log
+config.status
+config.sub
+configure
+depcomp
+install-sh
+intltool-extract.in
+intltool-merge.in
+intltool-update.in
+libtool
+ltmain.sh
+missing
+stamp-h1
+**/.deps/
+man/bubblemon*.1
+man/hu/bubblemon*.1
+man/sv/bubblemon*.1
+osx/bubblemon.xcodeproj/**/xcuserdata
+packaging/bubblemon-applet.spec
+panel/bonobo/GNOME_BubblemonApplet.server
+panel/bonobo/GNOME_BubblemonApplet.server.in
+panel/dbus/*@.in
+panel/org.*
+panel/**/*.o
 po/.intltool-merge-cache
+po/bubblemon.pot
 po/Makefile.in.in
+po/Makevars.template
 po/POTFILES
 po/*.gmo
 po/stamp-it
+src/*.o
 src/.deps/
-src/bubblemon-gnome2
 osx/bubblemon.xcodeproj/**/xcuserdata
 osx/window-frame.blend[0-9]
 bubblemon.xccheckout
